--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chuck Norris facts</title>
-        <link rel="stylesheet" href="/styles/bootstrap.min.css" />
-        <link rel="stylesheet" href="/styles/styles.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    </head>
-    <body class="d-flex flex-column align-items-center">
-        <h1 class="mt-5">Chuck Norris Facts!</h1>
-        <button class="btn btn-secondary btn-lg mt-5">Here!</button>
-        <div class="mt-5 container mx-0">
-            <div class="row">
-                <div class="col-4 d-flex justify-content-end">
-                    <img
-                        class="image"
-                        src="https://pngimg.com/uploads/chuck_norris/chuck_norris_PNG13.png"
-                        alt="Chuck Norris png"
-                    />
-                </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chuck Norris facts</title>
+    <link rel="stylesheet" href="/styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+  <body class="d-flex flex-column align-items-center">
+    <h1 class="mt-5">Chuck Norris Facts!</h1>
 
-                <div class="col d-flex align-items-center">
-                    <figure>
-                        <blockquote class="blockquote">
-                            <p id="fact" class="mb-0"></p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Norris, Chuck
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
+    <button class="btn btn-secondary btn-lg mt-5">Here!</button>
+
+    <div class="mt-5 container mx-0">
+      <div class="row">
+        <div class="col-4 d-none d-sm-block justify-content-end ">
+          <img
+            class="image"
+            src="https://pngimg.com/uploads/chuck_norris/chuck_norris_PNG13.png"
+            alt="Chuck Norris png"
+          />
         </div>
-        <script src="/script.js"></script>
-    </body>
+
+        <div class="col d-flex align-items-center">
+          <figure class="d-flex-column">
+            <blockquote class="blockquote">
+              <p id="fact" class="mb-0 text-center"></p>
+            </blockquote>
+            <figcaption class="blockquote-footer text-center">Norris, Chuck</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+    <script src="/script.js"></script>
+  </body>
 </html>
